<resources>
    <string name="app_name">TicketsAndroid</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">send</string>
    <string name="button_login">Log in</string>
    <!-- Strings related to login -->
    <string name="button_submit">submit</string>
    <string name="text_username">username</string>
    <string name="text_password">password</string>
    <string name="text_text_box_result">result</string>
    <string name="login_text_box_result_unsuitable_input">unsuitable input for user or password</string>
    <string name="text_view_register_invite">Register</string>
    <string name="text_or_register">or REGISTER</string>
    <!-- Strings related to register -->
    <string name="text_register_first_name">First name</string>
    <string name="text_register_family_name">Family name</string>
    <string name="text_register_phone">Phone number</string>
    <string name="text_register_e_mail">e-mail</string>
    <string name="text_register_username">Username</string>
    <string name="text_register_password">Password</string>
    <string name="text_register_password_">Re-enter password</string>
    <string name="button_register_submit">SUBMIT</string>
    <string name="text_register_header">Please, submit the form to register!</string>
    <!-- Strings related to main -->
    <string name="button_main_goto_admin">admin</string>
    <string name="button_main_goto_distributor">distributor</string>
    <string name="button_main_goto_organizer">organizer</string>

    <!-- Strings related to admin -->
    <string name="button_admin_add_role">add role</string>
    <string name="button_admin_undo_role">undo role</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="roles_hint">Enter a role: ADMIN,ORGANIZER OR DISTRIBUTOR</string>
    <string name="delete">DELETE</string>

    <!-- Strings related to distributor -->

    <string name="distributor_button_event">choose event</string>
    <string name="distributor_button_sale">Register sale</string>
    <string name="distributor_button_message">send message</string>
    <string name="organizer_button_place">choose place</string>
    <string name="seat_button_previous">previous</string>
    <string name="seat_button_next">next</string>
    <string name="seat_button_save">save</string>
    <string name="seat_button_exit">exit</string>
    <string name="seats_choice_longtext">\"The place, you chose, has \"</string>
    <string name="seats_button_refresh">refresh</string>
    <string name="organizer_event_name">event name</string>
    <string name="organizer_event_description">event description</string>
    <string name="organizer_event_type">event type</string>
    <string name="organizer_event_data">event date</string>
    <string name="organizer_event_place">event place</string>
    <string name="organizer_button_choose_event">choose event</string>
    <string name="organizer_button_add_event">add new event</string>
    <string name="organizer_button_submit">submit</string>
    <string name="organizer_event_header">SET UP EVENT</string>
    <string name="organizer_fill_form">FILL THE FORM TO ADD NEW OR</string>
    <string name="main_button_messages">messages</string>
    <string name="main_button_logout">log out</string>
    <string name="message_button_find">find contact</string>
    <string name="message_button_get">get messages</string>
    <string name="message_button_send">send message</string>
    <string name="message_button_exit">EXIT</string>
    <!--    <string name="textview">TextView</string>-->
    <!--    <string name="textview">TextView</string>-->
    <!--    <string name="textview">TextView</string>-->
</resources>