<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="EventMasterApp.MainActivity" android:onClick="OnButtonOrganizerClick">
    <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content" android:id="@+id/button2"
            android:hint="@string/button_send"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp"
            android:text="@string/button_login" android:onClick="LogIn" tools:layout_editor_absoluteY="17dp"/>
    <Button
            android:text="@string/button_main_goto_admin"
            android:layout_width="130dp"
            android:layout_height="wrap_content" android:id="@+id/button_login"
            app:layout_constraintStart_toStartOf="@+id/button2" app:layout_constraintTop_toBottomOf="@+id/button2"
            android:layout_marginTop="25dp" app:layout_constraintEnd_toEndOf="@+id/button2"
            android:onClick="GoToAdminActivity"/>
    <Button
            android:text="@string/button_main_goto_distributor"
            android:layout_width="130dp"
            android:layout_height="48dp" android:id="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            android:layout_marginTop="25dp" app:layout_constraintStart_toStartOf="@+id/button_login"
            android:onClick="onButtonDistributorClick"/>
    <Button
            android:text="@string/button_main_goto_organizer"
            android:layout_width="130dp"
            android:layout_height="wrap_content" android:id="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button3" app:layout_constraintTop_toBottomOf="@+id/button3"
            android:layout_marginTop="25dp" android:onClick="OnButtonOrganizerClick"/>
    <Button
            android:text="@string/main_button_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/main_button_messages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/main_button_logout"
            app:layout_constraintTop_toTopOf="@+id/main_button_logout" android:onClick="OnButtonMessagesClick"/>
    <Button
            android:text="@string/main_button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/main_button_logout"
            app:layout_constraintStart_toEndOf="@+id/main_button_messages"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" android:layout_marginTop="100dp"
            android:onClick="OnButtonLogOutClick"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/main_text_new_messages"
            app:layout_constraintBottom_toTopOf="@+id/main_button_messages"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="@+id/main_button_messages"
            app:layout_constraintEnd_toEndOf="@+id/main_button_messages"/>
</androidx.constraintlayout.widget.ConstraintLayout>