<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="EventMasterApp.LogInActivity" android:id="@+id/textViewRsult" android:onClick="GoToRegister">

    <EditText
            android:layout_width="0dp"
            android:layout_height="48dp" android:id="@+id/textViewUsername"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp" android:layout_marginStart="30dp" android:hint="@string/text_username"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewPassword"
            android:minHeight="48dp" android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewUsername" android:hint="@string/text_password"/>
    <Button
            android:text="@string/button_submit"
            android:layout_width="130dp"
            android:layout_height="50dp" android:id="@+id/buttonSubmitLogin"
            android:onClick="SubmitLogin"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword" android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/text_or_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewLoginMessage"
            android:hint="@string/text_text_box_result"
            app:layout_constraintTop_toBottomOf="@+id/buttonSubmitLogin"
            android:layout_marginTop="70dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/text_view_register_invite"
            android:layout_width="130dp"
            android:layout_height="50dp" android:id="@+id/RegisterButton"
            android:onClick="GoToRegister"
            app:layout_constraintTop_toBottomOf="@+id/textViewLoginMessage" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewTest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/RegisterButton"
            android:layout_marginTop="100dp" android:enabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>