<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="EventMasterApp.RegisterActivity">

    <TextView
            android:text="@string/text_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintBaseline_toBaselineOf="@+id/RegisterPersonPassword"
            android:hint="@string/text_register_password"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/RegisterPersonPasswordRe"
            app:layout_constraintTop_toBottomOf="@+id/RegisterPersonPassword"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/RegisterPersonPassword"
            tools:ignore="SpeakableTextPresentCheck" android:hint="@string/text_register_password_"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/RegisterPersonName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="30dp" android:hint="@string/text_register_first_name"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/RegisterPersonEMail"
            app:layout_constraintStart_toStartOf="@+id/RegisterPersonPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/RegisterPersonPhoneNumber" android:layout_marginTop="16dp"
            tools:ignore="SpeakableTextPresentCheck" android:hint="@string/text_register_e_mail"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/RegisterPersonUserName"
            app:layout_constraintStart_toStartOf="@+id/RegisterPersonEMail"
            app:layout_constraintTop_toBottomOf="@+id/RegisterPersonEMail" android:layout_marginTop="16dp"
            tools:ignore="SpeakableTextPresentCheck" android:hint="@string/text_register_username"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/RegisterPersonPhoneNumber"
            app:layout_constraintStart_toStartOf="@+id/RegisterPersonFamName"
            app:layout_constraintTop_toBottomOf="@+id/RegisterPersonFamName" android:layout_marginTop="16dp"
            android:hint="@string/text_register_phone"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/RegisterPersonPassword"
            app:layout_constraintStart_toStartOf="@+id/RegisterPersonUserName"
            app:layout_constraintTop_toBottomOf="@+id/RegisterPersonUserName" android:layout_marginTop="16dp"
            tools:ignore="SpeakableTextPresentCheck" android:hint="@string/text_register_password"/>
    <EditText
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/RegisterPersonFamName"
            app:layout_constraintTop_toBottomOf="@+id/RegisterPersonName"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/RegisterPersonName"
            android:hint="@string/text_register_family_name"/>
    <TextView
            android:text="@string/text_register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>
    <Button
            android:text="@string/button_register_submit"
            android:layout_width="130dp"
            android:layout_height="45dp" android:id="@+id/Register_submit_button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegisterPersonPassword" android:layout_marginTop="100dp"
            tools:ignore="TouchTargetSizeCheck" app:layout_constraintHorizontal_bias="0.498"
            android:onClick="onSubmitButtonClick"/>
    <TextView
            android:text="@string/text_register_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/RegisterPersonName" android:layout_marginStart="20dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/RegisterPersonName"
    />
    <TextView
            android:text="@string/text_register_family_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintBaseline_toBaselineOf="@+id/RegisterPersonFamName"/>
    <TextView
            android:text="@string/text_register_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintBaseline_toBaselineOf="@+id/RegisterPersonPhoneNumber"/>
    <TextView
            android:text="@string/text_register_e_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintBaseline_toBaselineOf="@+id/RegisterPersonEMail"
            android:hint="@string/text_register_e_mail"/>
    <TextView
            android:text="@string/text_register_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintBaseline_toBaselineOf="@+id/RegisterPersonUserName"
            android:hint="@string/text_register_username"/>
    <TextView
            android:text="@string/text_register_password_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            app:layout_constraintBaseline_toBaselineOf="@+id/RegisterPersonPasswordRe"
            app:layout_constraintStart_toStartOf="@+id/textView11"/>
</androidx.constraintlayout.widget.ConstraintLayout>