<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="EventMasterApp.DistributorActivity" android:onClick="OnButtonDistributorClick">

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/distributor_text_view"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/distributor_button_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/distributor_button"
            android:onClick="OnButtonDistributorChoiceClick"
            app:layout_constraintBottom_toTopOf="@+id/distributor_button_sale"
            android:layout_marginBottom="30dp" app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button"/>
    <Button
            android:text="@string/distributor_button_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="550dp"/>
    <Button
            android:text="@string/distributor_button_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/distributor_button_sale"
            app:layout_constraintBottom_toTopOf="@+id/button"
            android:layout_marginBottom="30dp" app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button" android:onClick="OnButtonDistributorClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>