<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="EventMasterApp.MessageActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/message_edit"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="300dp" android:minHeight="48dp"
    />
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/message_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/message_edit"
            app:layout_constraintEnd_toStartOf="@+id/message_edit"/>
    <Button
            android:text="@string/message_button_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/message_check"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/message_find_user"
            app:layout_constraintBottom_toBottomOf="@+id/message_find_user" android:onClick="OnButtonGetMessagesClick"/>
    <Button
            android:text="@string/message_button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/messaga_send"
            app:layout_constraintTop_toBottomOf="@+id/message_find_user"
            android:layout_marginTop="30dp" app:layout_constraintStart_toStartOf="@+id/message_find_user"
            app:layout_constraintEnd_toEndOf="@+id/message_find_user" android:onClick="OnButtonSendMessageClick"/>
    <Button
            android:text="@string/message_button_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/message_find_user"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/message_check"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/message_edit" android:layout_marginTop="30dp"
            android:onClick="OnButtonGetUsersClick"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/message_last_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/message_edit" app:layout_constraintVertical_bias="0.501"
            android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/message_button_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/message_button_exit"
            app:layout_constraintTop_toTopOf="@+id/messaga_send" app:layout_constraintEnd_toEndOf="@+id/message_check"
            app:layout_constraintStart_toStartOf="@+id/message_check" app:layout_constraintHorizontal_bias="0.509"
            android:onClick="OnButtonExitClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>