<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:backgroundTintMode="screen"
                                                   android:backgroundTint="@color/white"
                                                   android:background="@drawable/ic_launcher_background"
                                                   android:visibility="visible">

    <androidx.cardview.widget.CardView
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:backgroundTintMode="screen"
                android:background="@color/black" android:fadingEdge="vertical"
                android:foregroundGravity="center_vertical|clip_horizontal|fill_vertical" android:visibility="visible">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" android:id="@+id/admin_recycler_name"
                    android:textColor="@color/white"
                    android:textAlignment="textStart" android:textSize="20sp"
                    android:visibility="visible"
                    android:text="@string/action_settings"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="220dp"/>
            <TextView
                    android:text="@string/button_send"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp" android:id="@+id/admin_recycler_roles"
                    android:textColor="@color/white"
                    android:textAlignment="textStart" android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="@+id/admin_recycler_name"
                    app:layout_constraintTop_toBottomOf="@+id/admin_recycler_name" android:layout_marginTop="5dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" android:id="@+id/admin_recycler_username"
                    android:textSize="20sp"
                    android:textColor="@color/white" android:textColorHighlight="@color/purple_200"
                    tools:ignore="TextContrastCheck" android:visibility="visible"
                    android:text="@string/button_admin_undo_role"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>